<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_inscription"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:maxWidth="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:maxWidth="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:maxWidth="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="password"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

</LinearLayout>
